--- a/prust.html
+++ b/prust.html
@@ -21,6 +21,10 @@
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+      <!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+<!-- MDB -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.css" rel="stylesheet"/>
       <title>Voltic Development | Tools</title> 
       <link rel="apple-touch-icon" href="./assets/img/vlogo.png">
       <link rel="icon" href="../assets/img/vlogo.png"> 
@@ -68,9 +72,20 @@
         <p class="headerTitle" style="font-size: 1rem;"><br> 
           <a class="partner_txt" style="padding: .5rem;font-size: 1.5vh;font-weight: 800;"><a style="color:#ce422b;">Planet Rust</a> the Top quality, perfectly modified servers & Vanilla-Type, Bringing the best experience for Rust,  With active staff to assist with any questions you have. Come and check us out today!<br></a>
         </p>
-      <a href="https://discord.gg/MpMBG68tGs" class="btn6 btn-outline-dark" target="_blank" style="padding: 5px 25px 5px 25px;"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Discord</a>
-      <a href="https://planet-rust.com" class="btn6 btn-outline-dark" target="_blank" style="padding: 5px 25px 5px 25px;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Website</a><br><br>
-      <a href="#serverList" class="btn6 btn-outline-dark" style="padding: 5px 25px 5px 25px;"><i style="color: #8D73AD;" class="fas fa-server"></i>&nbsp;Servers</a>
+      <!-- <a href="https://discord.gg/MpMBG68tGs" class="btn6 btn-outline-dark" target="_blank" style="padding: 5px 25px 5px 25px;"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Discord</a> -->
+      <!-- <a href="https://planet-rust.com" class="btn6 btn-outline-dark" target="_blank" style="padding: 5px 25px 5px 25px;"><i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Website</a><br><br> -->
+      <!-- <a href="#serverList" class="btn6 btn-outline-dark" style="padding: 5px 25px 5px 25px;"><i style="color: #8D73AD;" class="fas fa-server"></i>&nbsp;Servers</a> -->
+
+      <a class="btn btn-primary" style="background-color: #1a2535;width: 10rem;"  href="https://discord.gg/MpMBG68tGs" role="button">
+        <i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;Discord
+      </a>&nbsp;
+      <a class="btn btn-primary" style="background-color: #1a2535;width: 10rem;" href="https://planet-rust.com" role="button">
+        <i style="color: #8e9629;" class="fas fa-house-user"></i>&nbsp;Website
+      </a>&nbsp;<br><br>
+      <a class="btn btn-primary" style="background-color: #1a2535;width: 10rem;" href="#serverList" role="button">
+        <i style="color: #8D73AD;" class="fas fa-server"></i>&nbsp;Servers
+      </a>&nbsp;
+
       <div class="header2">
         <h4 style="color: #ce422b;">Featured Servers</h4>
         </div>
@@ -96,8 +111,17 @@
             <p>
               <br>
               <a style="font-size: 1.5vh;">Join our <a class="discord_id" draggable="false" href="https://discord.gg/MpMBG68tGs" target="_blank" style="text-decoration: none; color: #97A9B4; font-weight: bolder;font-size: 1.5vh;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
-            <a href="steam://connect/eu-10x.planet-rust.com:28015" class="btn2 btn-outline-dark " style="text-decoration: none;font-size: 1.5vh;padding: 5px 35px 5px 35px;"><i style="color: #ce422b;" class="fas fa-network-wired"></i>&nbsp;Connect</a>
-            <a href="https://shop.planet-rust.com" class="btn2 btn-outline-dark" style="text-decoration: none;font-size: 1.5vh;padding: 5px 25px 5px 25px;" target="_blank"><i style="color: #72c5da;" class="fas fa-house-user"></i>&nbsp;Store</a>
+            <!-- <a href="steam://connect/eu-10x.planet-rust.com:28015" class="btn2 btn-outline-dark " style="text-decoration: none;font-size: 1.5vh;padding: 5px 35px 5px 35px;"><i style="color: #ce422b;" class="fas fa-network-wired"></i>&nbsp;Connect</a> -->
+            <!-- <a href="https://shop.planet-rust.com" class="btn2 btn-outline-dark" style="text-decoration: none;font-size: 1.5vh;padding: 5px 25px 5px 25px;" target="_blank"><i style="color: #72c5da;" class="fas fa-house-user"></i>&nbsp;Store</a> -->
+
+            <a class="btn btn-primary" style="background-color: #ce422b;" href="steam://connect/eu-10x.planet-rust.com:28015" role="button">
+              <i class="fas fa-network-wired"></i> 
+              Connect
+            </a>
+            <a class="btn btn-primary" style="background-color: #20758a;" href="https://shop.planet-rust.com" role="button">
+              <i class="fas fa-house-user"></i> 
+              Store
+            </a>
           </div>
         </div>
         <!--! Zap Hosting -->
@@ -114,8 +138,16 @@
             </center>
             <p>
               <a style="font-size: 1.5vh;">Join our <a class="discord_id" draggable="false" href="https://discord.gg/MpMBG68tGs" target="_blank" style="text-decoration: none; color: #97A9B4; font-weight: bolder;font-size: 1.5vh;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
-            <a href="steam://connect/us-grid.planet-rust.com:29015" class="btn2 btn-outline-dark" style="text-decoration: none;font-size: 1.5vh;padding: 5px 25px 5px 25px;"><i style="color: #ce422b;" class="fas fa-network-wired"></i>&nbsp;Connect</a>
-            <a href="https://shop.planet-rust.com" class="btn2 btn-outline-dark" style="text-decoration: none;font-size: 1.5vh;padding: 5px 25px 5px 25px;" target="_blank"><i style="color: #72c5da;" class="fas fa-house-user"></i>&nbsp;Store</a>
+            <!-- <a href="steam://connect/us-grid.planet-rust.com:29015" class="btn2 btn-outline-dark" style="text-decoration: none;font-size: 1.5vh;padding: 5px 25px 5px 25px;"><i style="color: #ce422b;" class="fas fa-network-wired"></i>&nbsp;Connect</a> -->
+            <!-- <a href="https://shop.planet-rust.com" class="btn2 btn-outline-dark" style="text-decoration: none;font-size: 1.5vh;padding: 5px 25px 5px 25px;" target="_blank"><i style="color: #72c5da;" class="fas fa-house-user"></i>&nbsp;Store</a> -->
+            <a class="btn btn-primary" style="background-color: #ce422b;" href="steam://connect/us-grid.planet-rust.com:29015" role="button">
+              <i class="fas fa-network-wired"></i> 
+              Connect
+            </a>
+            <a class="btn btn-primary" style="background-color: #20758a;" href="https://shop.planet-rust.com" role="button">
+              <i class="fas fa-house-user"></i> 
+              Store
+            </a>
           </div>
           <div class="col-md-6 mb-md-0 p-md-4">
             <img class="prustImg" src="./assets/img/prust/rust-2.jpeg" class="w-100" alt="...">
@@ -137,8 +169,16 @@
                   </ul>
               </center> 
             <a style="font-size: 1.5vh;">Join our <a class="discord_id" draggable="false" href="https://discord.gg/MpMBG68tGs"  target="_blank" style="text-decoration: none; color: #97A9B4; font-weight: bolder;font-size: 1.5vh;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br>
-            <a href="steam://connect/us-2x.planet-rust.com:28015" class="btn2 btn-outline-dark" style="text-decoration: none;font-size: 1.5vh;padding: 5px 25px 5px 25px;"><i style="color: #ce422b;" class="fas fa-network-wired"></i>&nbsp;Connect</a>
-            <a href="https://shop.planet-rust.com" class="btn2 btn-outline-dark" style="text-decoration: none;font-size: 1.5vh;padding: 5px 25px 5px 25px;" target="_blank"><i style="color: #72c5da;" class="fas fa-house-user"></i>&nbsp;Store</a>
+            <!-- <a href="steam://connect/us-2x.planet-rust.com:28015" class="btn2 btn-outline-dark" style="text-decoration: none;font-size: 1.5vh;padding: 5px 25px 5px 25px;"><i style="color: #ce422b;" class="fas fa-network-wired"></i>&nbsp;Connect</a> -->
+            <!-- <a href="https://shop.planet-rust.com" class="btn2 btn-outline-dark" style="text-decoration: none;font-size: 1.5vh;padding: 5px 25px 5px 25px;" target="_blank"><i style="color: #72c5da;" class="fas fa-house-user"></i>&nbsp;Store</a> -->
+            <a class="btn btn-primary" style="background-color: #ce422b;" href="steam://connect/us-2x.planet-rust.com:28015" role="button">
+              <i class="fas fa-network-wired"></i> 
+              Connect
+            </a>
+            <a class="btn btn-primary" style="background-color: #20758a;" href="https://shop.planet-rust.com" role="button">
+              <i class="fas fa-house-user"></i> 
+              Store
+            </a>
           </div>
         </div><br>
           
@@ -168,23 +208,38 @@
           <h4 style="color: #fafafa;"><a style="color: #ce422b;">US</a >&nbsp;Servers</h4>
             <hr style="height:2px;width:35rem;border-width:0;color:#fafafa;background-color:#fafafa"><br>
             <img loading="lazy" src="https://cache.gametracker.com/server_info/172.93.101.33:28015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;<br><br>
-            <a href="steam://connect/us-grid.planet-rust.com:28015"  class="btn btn-outline-dark" style="width: auto;"><i class="fas fa-network-wired"></i>&nbsp;Connect</a><br>
+            <a class="btn btn-primary" style="background-color: #ce422b;" href="steam://connect/us-grid.planet-rust.com:28015" role="button">
+              <i class="fas fa-network-wired"></i> 
+              Connect
+            </a>
             <hr style="height:2px;width:35rem;border-width:0;color:#fafafa;background-color:#fafafa">
       <br>
             <img loading="lazy" src="https://cache.gametracker.com/server_info/us-2x.planet-rust.com:28015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;<br><br>
-            <a href="steam://connect/us-2x.planet-rust.com:28015"  class="btn btn-outline-dark" style="width: auto;"><i class="fas fa-network-wired"></i>&nbsp;Connect</a><br>
+            <a class="btn btn-primary" style="background-color: #ce422b;" href="steam://connect/us-2x.planet-rust.com:28015" role="button">
+              <i class="fas fa-network-wired"></i> 
+              Connect
+            </a>
             <hr style="height:2px;width:35rem;border-width:0;color:#fafafa;background-color:#fafafa">
       <br>
             <img loading="lazy" src="https://cache.gametracker.com/server_info/209.222.101.104:28015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;<br><br>
-            <a href="steam://connect/us-10x.planet-rust.com:28015"  class="btn btn-outline-dark" style="width: auto;"><i class="fas fa-network-wired"></i>&nbsp;Connect</a><br>
+            <a class="btn btn-primary" style="background-color: #ce422b;" href="steam://connect/us-10x.planet-rust.com:28015" role="button">
+              <i class="fas fa-network-wired"></i> 
+              Connect
+            </a>
             <hr style="height:2px;width:35rem;border-width:0;color:#fafafa;background-color:#fafafa">
       <br>
             <img loading="lazy" src="https://cache.gametracker.com/server_info/172.93.101.33:29015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;<br><br>
-            <a href="steam://connect/us-grid.planet-rust.com:29015"  class="btn btn-outline-dark" style="width: auto;"><i class="fas fa-network-wired"></i>&nbsp;Connect</a><br>
+            <a class="btn btn-primary" style="background-color: #ce422b;" href="steam://connect/us-grid.planet-rust.com:29015" role="button">
+              <i class="fas fa-network-wired"></i> 
+              Connect
+            </a>
             <hr style="height:2px;width:35rem;border-width:0;color:#fafafa;background-color:#fafafa">
       <br>
             <img loading="lazy" src="https://cache.gametracker.com/server_info/us-3x.planet-rust.com:28015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;<br><br>
-            <a href="steam://connect/us-3x.planet-rust.com:28015"  class="btn btn-outline-dark" style="width: auto;" ><i class="fas fa-network-wired"></i>&nbsp;Connect</a><br>
+            <a class="btn btn-primary" style="background-color: #ce422b;" href="steam://connect/us-3x.planet-rust.com:28015" role="button">
+              <i class="fas fa-network-wired"></i> 
+              Connect
+            </a>
             <hr style="height:2px;width:35rem;border-width:0;color:#fafafa;background-color:#fafafa">
       <br>
         </center>
@@ -195,19 +250,31 @@
           <h4 style="color: #fafafa;"><a style="color: #ce422b;">EU</a >&nbsp;Servers</h4>
             <hr style="height:2px;width:35rem;border-width:0;color:#fafafa;background-color:#fafafa"><br>
             <img loading="lazy" src="https://cache.gametracker.com/server_info/109.238.14.221:28015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;<br><br>
-            <a href="steam://connect/eu-grid.planet-rust.com:28015"  class="btn btn-outline-dark" style="width: auto;"><i class="fas fa-network-wired"></i>&nbsp;Connect</a><br>
+            <a class="btn btn-primary" style="background-color: #ce422b;" href="steam://connect/eu-grid.planet-rust.com:28015" role="button">
+              <i class="fas fa-network-wired"></i> 
+              Connect
+            </a>
             <hr style="height:2px;width:35rem;border-width:0;color:#fafafa;background-color:#fafafa">
       <br>
       <img loading="lazy" src="https://cache.gametracker.com/server_info/eu-2x.planet-rust.com:28015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;<br><br>
-      <a href="steam://connect/eu-2x.planet-rust.com:28015"  class="btn btn-outline-dark" style="width: auto;"><i class="fas fa-network-wired"></i>&nbsp;Connect</a><br>
+      <a class="btn btn-primary" style="background-color: #ce422b;" href="steam://connect/eu-2x.planet-rust.com:28015" role="button">
+        <i class="fas fa-network-wired"></i> 
+        Connect
+      </a>
             <hr style="height:2px;width:35rem;border-width:0;color:#fafafa;background-color:#fafafa">
       <br>
       <img loading="lazy" src="https://cache.gametracker.com/server_info/109.238.14.201:28015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;<br><br>
-      <a href="steam://connect/eu-10x.planet-rust.com:28015"  class="btn btn-outline-dark" style="width: auto;"><i class="fas fa-network-wired"></i>&nbsp;Connect</a><br>
+      <a class="btn btn-primary" style="background-color: #ce422b;" href="steam://connect/eu-10x.planet-rust.com:28015" role="button">
+        <i class="fas fa-network-wired"></i> 
+        Connect
+      </a>
             <hr style="height:2px;width:35rem;border-width:0;color:#fafafa;background-color:#fafafa">
       <br>
-            <<img loading="lazy" src="https://cache.gametracker.com/server_info/109.238.14.221:29015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;<br><br>
-            <a href="steam://connect/eu-grid.planet-rust.com:29015"  class="btn btn-outline-dark" style="width: auto;"><i class="fas fa-network-wired"></i>&nbsp;Connect</a><br>
+            <img loading="lazy" src="https://cache.gametracker.com/server_info/109.238.14.221:29015/b_560_95_1.png" alt="" width="560" height="95" border="0">&nbsp;<br><br>
+            <a class="btn btn-primary" style="background-color: #ce422b;" href="steam://connect/eu-grid.planet-rust.com:29015" role="button">
+              <i class="fas fa-network-wired"></i> 
+              Connect
+            </a>
             <hr style="height:2px;width:35rem;border-width:0;color:#fafafa;background-color:#fafafa">
       <br>
         </center>
