--- a/projects.html
+++ b/projects.html
@@ -22,6 +22,10 @@
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+      <!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+<!-- MDB -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.css" rel="stylesheet"/>
       <title>Voltic Development | Projects</title> 
       <link rel="apple-touch-icon" href="./assets/img/vlogo.png">
       <link rel="icon" href="../assets/img/vlogo.png"> 
@@ -78,9 +82,12 @@
         </div>
       </div>
       <br><br><br> 
-      <a href="#bots" class="btn5 btn-outline-dark" style="padding: 5px 25px 5px 25px;"><i style="color: rgb(83, 83, 168);"  class="fas fa-robot"></i>&nbsp;Discord Bots</a>
-      <a href="#other" class="btn5 btn-outline-dark" style="padding: 5px 25px 5px 25px;"><i style="color: #8e9629;" class="fas fa-code-branch"></i>&nbsp;Other Projects</a>
-
+      <a class="btn btn-primary" style="background-color: #1a2535;width: 12rem;" href="#bots" role="button">
+        <i style="color: rgb(83, 83, 168);"  class="fas fa-robot"></i>&nbsp;Discord Bots
+      </a>&nbsp;
+      <a class="btn btn-primary" style="background-color: #1a2535;width: 12rem;" href="#other" role="button">
+        <i style="color: #8e9629;" class="fas fa-code-branch"></i>&nbsp;Other Projects
+      </a>&nbsp;
       <div id="bots"></div>
         <div class="header">
           <h4>Discord Bots</h4>
@@ -93,11 +100,17 @@
                Mythbot Radio
                  </div>
                  <div class="card-body" style="background-color: #0e141d;"><br>
-                 <center><img class="staffImg" draggable="false" src="../assets/img/projects/mbr-logo.png" > </img></center><br>
-                 <center><p class="card-text" >&nbsp;<span>Join 1.5m Users, User 💎MythBot Radio™, With over 30+ Radio Stations From All Over The World</span></p></center><br>
-                 <a href="https://www.mythbot.org" class="btn btn-outline-dark"><i class="fas fa-house-user" style="color: #6b3434;"></i>&nbsp;</a>
-                 <a href="https://www.mythbot.org/mbr" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-plus-square"></i>&nbsp;</a>
-                 <a href="./discord.html" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
+                 <center><img class="staffImg" draggable="false" src="../assets/img/projects/mbr-logo.png" > </img><br><br>
+                 <p class="card-text" >&nbsp;<span>Join 1.5m Users, User 💎MythBot Radio™, With over 30+ Radio Stations From All Over The World</span></p></center><br><br>
+                  <a class="btn btn-primary" style="background-color: #6b3434;" target="_blank" href="https://www.mythbot.org" role="button">
+                  <i class="fas fa-home"></i>
+                </a>
+                <a class="btn btn-primary" style="background-color: #333333;" target="_blank" href="https://www.mythbot.org/mbr" role="button">
+                  <i class="bi bi-plus-square"></i>
+                </a>
+                <a class="btn btn-primary" style="background-color: #7289DA;" target="_blank" href="./discord.html" role="button">
+                  <i class="bi bi-discord"></i>
+                </a>
                </div>
              </div>       
            <!-- TODO Mythbot Radio -->
@@ -106,11 +119,17 @@
               Upcoming Discord Bot
                </div>
                <div class="card-body" style="background-color: #0e141d;"><br>
-               <center><img class="staffImg" draggable="false" src="../assets/img/vlogot.png" style="border-radius: 50%;"> </img></center><br>
-               <center><p class="card-text" >&nbsp;Join our <a href="./discord.html" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more upcoming information about our new and upcoming projects</p></center><br>
-               <a href="./discord.html" class="btn btn-outline-dark"><i class="fas fa-house-user" style="color: #6b3434;"></i>&nbsp;</a>
-               <a href="./discord.html" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-plus-square"></i>&nbsp;</a>
-               <a href="./discord.html" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
+               <center><img class="staffImg" draggable="false" src="../assets/img/vlogot.png" style="border-radius: 50%;"> </img><br><br>
+               <p class="card-text" >&nbsp;Join our <a href="./discord.html" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more upcoming information about our new and upcoming projects</p></center><br><br>
+               <a class="btn btn-primary" style="background-color: #6b3434;" target="_blank" href="./discord.html" role="button">
+                <i class="fas fa-home"></i>
+              </a>
+              <a class="btn btn-primary" style="background-color: #333333;" target="_blank" href="./discord.html" role="button">
+                <i class="bi bi-plus-square"></i>
+              </a>
+              <a class="btn btn-primary" style="background-color: #7289DA;" target="_blank" href="./discord.html" role="button">
+                <i class="bi bi-discord"></i>
+              </a>
              </div>
            </div>      
            <!-- TODO Mythbot Radio -->
@@ -119,11 +138,17 @@
               Upcoming Discord Bot
                </div>
                <div class="card-body" style="background-color: #0e141d;"><br>
-               <center><img class="staffImg" draggable="false" src="../assets/img/vlogot.png" style="border-radius: 50%;"> </img></center><br>
-               <center><p class="card-text" >&nbsp;Join our <a href="./discord.html" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more upcoming information about our new and upcoming projects</p></center><br>
-               <a href="./discord.html" class="btn btn-outline-dark"><i class="fas fa-house-user" style="color: #6b3434;"></i>&nbsp;</a>
-               <a href="./discord.html" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-plus-square"></i>&nbsp;</a>
-               <a href="./discord.html" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
+               <center><img class="staffImg" draggable="false" src="../assets/img/vlogot.png" style="border-radius: 50%;"> </img><br><br>
+               <p class="card-text" >&nbsp;Join our <a href="./discord.html" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more upcoming information about our new and upcoming projects</p></center><br><br>
+               <a class="btn btn-primary" style="background-color: #6b3434;" target="_blank" href="./discord.html" role="button">
+                <i class="fas fa-home"></i>
+              </a>
+              <a class="btn btn-primary" style="background-color: #333333;" target="_blank" href="./discord.html" role="button">
+                <i class="bi bi-plus-square"></i>
+              </a>
+              <a class="btn btn-primary" style="background-color: #7289DA;" target="_blank" href="./discord.html" role="button">
+                <i class="bi bi-discord"></i>
+              </a>
              </div>
            </div>      
         </div><br><br>
@@ -142,21 +167,33 @@
        <div class="card-body" style="background-color: #0e141d;"><br>
        <center><img class="staffImg" draggable="false" src="../assets/img/projects/dscbots2.gif" style="border-radius: 50%;"> </img></center><br>
        <center><p class="card-text">&nbsp;<span>join or Grow your community with DscBots, From Discord bots to Discord servers and more!</span></p></center><br>
-       <a href="https://www.dscbots.xyz" class="btn btn-outline-dark"><i class="fas fa-house-user" style="color: #6b3434;"></i>&nbsp;</a>
-       <a href="https://dscbots.xyz/bot-rules" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-plus-square"></i>&nbsp;</a>
-       <a href="https://www.dscbots.xyz/discord" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
+       <a class="btn btn-primary" style="background-color: #6b3434;" target="_blank" href="https://www.dscbots.xyz" role="button">
+        <i class="fas fa-home"></i>
+      </a>
+      <a class="btn btn-primary" style="background-color: #333333;" target="_blank" href="https://dscbots.xyz/bot-rules" role="button">
+        <i class="bi bi-plus-square"></i>
+      </a>
+      <a class="btn btn-primary" style="background-color: #7289DA;" target="_blank" href="https://www.dscbots.xyz/discord" role="button">
+        <i class="bi bi-discord"></i>
+      </a>
      </div>
    </div>
    <div class="card text-white bg-dark" ">
      <div class="card-header" style="background-color: #1a2535;">
-       Upcoming Project
+       Time & NSFW API
         </div>
         <div class="card-body" style="background-color: #0e141d;"><br>
         <center><img class="staffImg" draggable="false" src="../assets/img/vlogot.png" style="border-radius: 50%;"> </img></center><br>
-        <center><p class="card-text" >&nbsp;Join our <a href="./discord.html" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more upcoming information about our new and upcoming projects</p></center><br>
-        <a href="./discord.html" class="btn btn-outline-dark"><i class="fas fa-house-user" style="color: #6b3434;"></i>&nbsp;</a>
-        <a href="./discord.html" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-plus-square"></i>&nbsp;</a>
-        <a href="./discord.html" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
+        <center><p class="card-text" >&nbsp;A Powerful API <a href="./discord.html" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Easy</a>, <a href="./discord.html" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Fast</a>, <a href="./discord.html" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Reliable</a> Providing you with the most accurate Time & High Quality NSFW Gifs</p></center><br>
+        <a class="btn btn-primary" style="background-color: #6b3434;" target="_blank" href="https://api.mythbot.org" role="button">
+          <i class="fas fa-home"></i>
+        </a>
+        <a class="btn btn-primary" style="background-color: #333333;" target="_blank" href="https://api.mythbot.org/discord.html" role="button">
+          <i class="bi bi-plus-square"></i>
+        </a>
+        <a class="btn btn-primary" style="background-color: #7289DA;" target="_blank" href="https://api.mythbot.org/discord.html" role="button">
+          <i class="bi bi-discord"></i>
+        </a>
       </div>
     </div>
    <div class="card text-white bg-dark" ">
@@ -166,9 +203,15 @@
         <div class="card-body" style="background-color: #0e141d;"><br>
         <center><img class="staffImg" draggable="false" src="../assets/img/vlogot.png" style="border-radius: 50%;"> </img></center><br>
         <center><p class="card-text" >&nbsp;Join our <a href="./discord.html" style="text-decoration: none; color: #7289DA; font-weight: bolder;" >Discord</a> For more upcoming information about our new and upcoming projects</p></center><br>
-        <a href="./discord.html" class="btn btn-outline-dark"><i class="fas fa-house-user" style="color: #6b3434;"></i>&nbsp;</a>
-        <a href="./discord.html" class="btn btn-outline-dark"><i style="color: #fafafa;" class="bi bi-plus-square"></i>&nbsp;</a>
-        <a href="./discord.html" class="btn btn-outline-dark"><i style="color: #7289DA;"  class="bi bi-discord"></i>&nbsp;</a>
+         <a class="btn btn-primary" style="background-color: #6b3434;" href="./discord.html" target="_blank" role="button">
+          <i class="fas fa-home"></i>
+        </a>
+        <a class="btn btn-primary" style="background-color: #333333;" href="./discord.html" target="_blank" role="button">
+          <i class="bi bi-plus-square"></i>
+        </a>
+        <a class="btn btn-primary" style="background-color: #7289DA;" href="./discord.html" target="_blank" role="button">
+          <i class="bi bi-discord"></i>
+        </a>
       </div>
     </div>
         </div>
