--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 </a>
               </div>
             </div>
-        </div><br><br>
+        </div><br><br><br>
           <center>
              <!--! Saria#2561 -->
            <div class="card text-white bg-dark" style="height: 50px;">
@@ -207,7 +207,7 @@
       <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fas fa-arrow-up"></i></button>
 </div>
 <br><br><br><br><br><br>
-<div class="d-flex flex-wrap justify-content-between align-items-center " style="background-color: #0e141d; padding-top: .5rem;align-items: center; " >
+<div class="d-flex flex-wrap justify-content-between align-items-center " style="background-color: #0e141d;padding-top: .5rem;align-items: center;" >
   <div class="col-md-4 d-flex align-items-center">
     <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
       <svg class="bi" width="30" height="24"><use xlink:href="/"></use></svg>
@@ -219,7 +219,7 @@
     <li class="btn2 btn-outline-dark"><a class="text-muted" href="./discord.html"><i class="bi bi-discord"></i></a></li>
     <li class="btn2 btn-outline-dark"><a class="text-muted" href="https://twitter.com/JoKeRxHD"><i class="fab fa-twitter"></i></a></li>
     <li class="btn2 btn-outline-dark"><a class="text-muted" href="https://github.com/JoKeRxTD"><i class="bi bi-github"></i></a></li>
-    <svg class="bi" width="30" height="24"><use xlink:href="/"></use></svg>
+    <svg class="bi" width="65" height="24"><use xlink:href="/"></use></svg>
   </ul>
   
 </div>
