more updates to the footer

--- a/prust.html
+++ b/prust.html
@@ -289,8 +289,8 @@
       </div>
     
       <ul class="col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="btn2 btn-outline-dark"><a class="text-muted" href="./discord.html"><i class="bi bi-discord"></i></a></li>
-        <li class="btn2 btn-outline-dark"><a class="text-muted" href="https://twitter.com/JoKeRxHD"><i class="fab fa-twitter"></i></a></li>
+        <li class="btn2 btn-outline-dark"><a class="text-muted" href="./discord.html"><i class="bi bi-discord"></i></a></li>&nbsp;
+        <li class="btn2 btn-outline-dark"><a class="text-muted" href="https://twitter.com/JoKeRxHD"><i class="fab fa-twitter"></i></a></li>&nbsp;
         <li class="btn2 btn-outline-dark"><a class="text-muted" href="https://github.com/JoKeRxTD"><i class="bi bi-github"></i></a></li>
         <svg class="bi" width="65" height="24"><use xlink:href="/"></use></svg>
       </ul>
