fixed typo on store page

--- a/index.html
+++ b/index.html
@@ -66,20 +66,23 @@
     </div>
     </div>
   <div class="container">
-    <center><img class="logoImg" src="./assets/img/vlogot.png" draggable="false" alt="vdlogo" style="text-align: center;"></center>
-            <h2 style="text-decoration: none; color: #7289DA; font-size: 2rem;  color: #97A9B4;text-align: center;">Voltic Development</h2><br>
-        <p class="headerTitle" style="font-size: 1rem;"> 
-            Welcome to our new website. We hope you find what you are looking for, In the mean time <br>Join our <a class="discord_id" draggable="false" href="./discord.html" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br><br>
-            <a class="btn btn-primary" style="background-color: #1a2535;width: 10rem;" href="./discord.html" role="button">
-              <i class="fab fa-discord"></i>
-              Support
-            </a>&nbsp;
-            <a class="btn btn-primary" style="background-color: #1a2535;width: 10rem;" href="./store.html" role="button">
-              <i class="fas fa-store"></i>
-              Store
-            </a>&nbsp;
-        </p><br>
-        
+    <div class="mainHeader" >
+      <center>
+        <img class="logoImg" src="./assets/img/vlogot.png" draggable="false" alt="vdlogo" style="text-align: center;"></center>
+              <h2 style="text-decoration: none; color: #7289DA; font-size: 2rem;  color: #97A9B4;text-align: center;">Voltic Development</h2><br>
+          <p class="headerTitle" style="font-size: 1rem;"> 
+              Welcome to our new website. We hope you find what you are looking for, In the mean time <br>Join our <a class="discord_id" draggable="false" href="./discord.html" style="text-decoration: none; color: #97A9B4; font-weight: bolder;" ><i class="bi bi-discord" style="color: #7289DA;"></i>Discord</a><br><br><br>
+              <a class="btn btn-primary" style="background-color: #1a2535;width: 10rem;" href="./discord.html" role="button">
+                <i class="fab fa-discord"></i>
+                Support
+              </a>&nbsp;
+              <a class="btn btn-primary" style="background-color: #1a2535;width: 10rem;" href="./store.html" role="button">
+                <i class="fas fa-store"></i>
+                Store
+              </a>&nbsp;
+          </p>
+    </div>
+      <br>        
     <br>
       <!-- Recruiting Box -->
         <div class="flip-card">
