--- a/store.html
+++ b/store.html
@@ -101,7 +101,7 @@
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/basic-package.png" > </img></center><br> -->
-                <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£11.64</b> Per Month</span></p></center><br>
+                <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£11.64</b> One Time Payment</span></p></center><br>
                 <center><p class="card-text" >&nbsp;<span>Get your own custom <b style="color: #7289DA;">Landing page + Source Code</b></span></p></center><br>
                 <!-- <a href="https://vdevs.tebex.io/package/4882074" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a> -->
                 <a class="btn btn-primary" style="background-color: #1a2535;width: 10rem;" target="_blank" href="https://vdevs.tebex.io/package/4882074" role="button">
@@ -122,7 +122,7 @@
                 </div>
                 <div class="card-body" style="background-color: #0e141d;"><br>
                 <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/standard-package.png" > </img></center><br> -->
-                <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£16.40</b> Per Month</span></p></center><br>
+                <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£16.40</b> One Time Payment</span></p></center><br>
                 <center><p class="card-text" >&nbsp;<span>Get your own custom <b style="color: #7289DA;">Landing Page + 1 Extra Page + Source Code</b></span></p></center><br>
                 <!-- <a href="https://vdevs.tebex.io/package/4882076" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a> -->
                 <a class="btn btn-primary" style="background-color: #1a2535;width: 10rem;" target="_blank" href="https://vdevs.tebex.io/package/4882076" role="button">
@@ -142,7 +142,7 @@
                  </div>
                  <div class="card-body" style="background-color: #0e141d;"><br>
                  <!-- <center><img class="storeImg" draggable="false" src="./assets/img/packages/premium-package.png"> </img></center><br> -->
-                 <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£24.95</b> Per Month</span></p></center><br>
+                 <center><p class="card-text" >&nbsp;<span>Price:&nbsp;<b style="color: #7289DA;">£24.95</b> One Time Payment</span></p></center><br>
                  <center><p class="card-text" >&nbsp;<span>Get your own custom <b style="color: #7289DA;">Landing Page + 3 Extra Pages + Source Code</b></span></p></center><br>
                  <!-- <a href="https://vdevs.tebex.io/package/4882078" target="_blank" class="btn4 btn-outline-dark"><i class="fas fa-shopping-cart" style="color: green;"></i>&nbsp;Order Now</a> -->
                  <a class="btn btn-primary" style="background-color: #1a2535;width: 10rem;" target="_blank" href="https://vdevs.tebex.io/package/4882078" role="button">
