--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
       <meta name="twitter:creator" content="@jokerxtd"/>
       <meta name="twitter:title" content="Voltic Development | Projects" />
       <meta name="twitter:description" content="A place you can call home. Need help with what you are working on? Come join us and ask the community, We all have the same goal & that is."/>
-      <meta name="twitter:image" content="https://cdn.mythbot.org/img/dev_g19goiuj.png" />
+      <meta name="twitter:image" content="https://cdn.mythbot.org/img/dev_a7ysy2ht.png" />
       <meta name="theme-color" content="#36393E">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
